--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-		<div id="titlebox" data-aos="fade-down">
-			<h1>floppa.info</h1>
-			<span style="vertical-align: top;">Bumble's Website</span>
+		<div id="titlebox">
+			<h1  data-aos="fade-down">floppa.info</h1>
+			<span style="vertical-align: top;" data-aos="fade-down">Bumble's Website</span>
 		</div>
 
 		<ul class="topnav">
