--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<!-- AOS Library -->
+		<link rel="shortcut icon" href="https://fretnoize.neocities.org/Images/floppa.png" type="image/x-icon">  
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 	</head>
 	<body>
 		<div id="titlebox">
-			<h1  data-aos="fade-down">floppa.info</h1>
+			<h1 data-aos="fade-down">floppa.info</h1>
 			<span style="vertical-align: top;" data-aos="fade-down">Bumble's Website</span>
 		</div>
 
 		<ul class="topnav">
-			<li><a href="#home" class="f">Home</a></li>
-			<li><a href="#blog">Blog</a></li>
-			<li><a href="https://github.com/itsbumble/floppa.info">Github</a></li>
-			<li class="right"><a href="#contact" class="l">Contact</a></li>
+			<li data-aos="fade-down" data-aos-delay="500"><a href="#home" class="f">Home</a></li>
+			<li data-aos="fade-down" data-aos-delay="600"><a href="#blog">Blog</a></li>
+			<li data-aos="fade-down" data-aos-delay="700"><a href="https://github.com/itsbumble/floppa.info">Github</a></li>
+			<li data-aos="fade-down" data-aos-delay="1000" class="right"><a href="#contact" class="l">Contact</a></li>
 		</ul>
 
 		  
