--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<!-- AOS Library -->
-		<link rel="shortcut icon" href="https://fretnoize.neocities.org/Images/floppa.png" type="image/x-icon">  
+		<link rel="shortcut icon" href="" type="image/x-icon">  
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
