ah shit oops i forgot my brain is the size of a peanut when it comes to html
i fucked it up and the button was on the left and not the right and i literally dont know html so i cant fix that LMFAO

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<li data-aos="fade-down" data-aos-delay="500"><a href="#home" class="f">Home</a></li>
 			<li data-aos="fade-down" data-aos-delay="600"><a href="#blog">Blog</a></li>
 			<li data-aos="fade-down" data-aos-delay="700"><a href="https://github.com/itsbumble/floppa.info">Github</a></li>
-			<li data-aos="fade-down" data-aos-delay="1000"><a href="https://discord.gg/hNPpwPmWRr">Discord Server</a></li>
+			<li data-aos="fade-down" data-aos-delay="1000" class="right"><a href="#contact" class="l">Contact</a></li>
 		</ul>
 
 		  
